cms/package/skin/src/main/webapp/screen.css
/* ... */
/* override from wicket styles */
.hippo-toolbar-section-button{
width: 110px; display: block; height: 16px; padding-left: 4px; padding-top: 2px;
border: 1px solid #e3e3e3;
background: url("images/hippo-toolbar-menu-item.png") no-repeat right -20px;
cursor: pointer;
clear: left;
}
.hippo-toolbar-section-button:hover{ border: 1px solid #000000;
color: black
}
/* background: url("images/hippo-toolbar-menu-item.png") no-repeat top right;  */
 
.hippo-toolbar-menu-item-button{display: block; float: none; border: 1px solid transparent; padding: 2px; width: 150px;}

/* override the default text-decoration: underline */
.hippo-root .hippo-toolbar-menu-item-button:hover{background: #fff6e0; border: 1px solid #afafaf; text-decoration: none}

.hippo-toolbar-menu-item li{display: block; clear:left; margin-right: 0px; padding-top: 1px; padding-bottom: 1px;}

.hippo-toolbar-menu-item-button-icon{display: block; float: left; margin-right: 11px; }

.hippo-toolbar-section li.icon-16{padding-left: 0px; background-position: 3px 4px; width: 118px;}
.hippo-toolbar-section span.icon-16{display: block; height: 16px; width: 16px}

.hippo-toolbar-section li.icon-16 div{position: relative}

.menu-action{padding-left: 8px; padding-right: 8px; padding-top: 4px; background-image: none; border: 1px solid #e3e3e3; display: block; cursor: pointer; min-width:100px; height: 14px;}
.menu-action:hover{border: 1px solid #000000;background-color: #fff6e0;}
.menu-action-text{width: 90px; height: 17px; vertical-align: top; padding-top: 0px; margin-top: 0px; }
.menu-action-icon{padding-top: 0px;}
.menu-label{padding-left: 4px; padding-right: 8px; padding-top: 3px; background-image: none; border: 0px solid #e3e3e3; display: block; min-width:100px; height: 17px; white-space: nowrap; }
.menu-spacer{width:80px;}

/* Default feedback */
/* ================================================ */
.hippo-feedback ul {
text-align: left;
margin-left: 60px; 
margin-right: 60px; 
border: 1px solid #69849f; 
color: #69849f;
background-color: #fff8d5; 
margin-bottom: 15px; 
font-weight: bold;
background-image: url("images/icons/dialog-information-32.png");
background-repeat: no-repeat;
background-position: 10px 5px;
padding-left: 70px;
min-height: 35px;
height: 35px;
padding-top: 8px;
}
.hippo-feedback ul li{list-style-type: disc}

/* Windows */
/* ================================================ */
.hippo-window{background: none}
.hippo-window .hippo-root{background: none}

.hippo-window .hippo-root table.modal-contents { margin: 10px 25px 0px 25px; }
.hippo-window .hippo-root table.modal-contents td { padding: 2px 5px 2px 5px; }

.hippo-window h1, .hippo-window h1{margin-bottom: 10px; font-size: 16px;}
.hippo-window-buttons{text-align: right; position: absolute; right: 15px; bottom: 15px; }
.hippo-window .wicketExtensionsWizardInnerTable .wicketExtensionsWizardButtonBar{ padding-top: 10px;}

.hippo-window-buttons input{} 
/* forms inside windows */
table.hippo-window-form{width: 100%;}

.hippo-window-form {background: #f4f4f4; padding: 5px;}
.hippo-window-form td input{background: white; border: 1px solid #afafaf; padding: 3px; line-height: 18px;}
.hippo-window-form td{padding: 5px;}
.hippo-window-form .hippo-form-select{width: 300px;}

.hippo-window .notification {
 display: block;
 padding: 25px;
}

.hippo-window .hippo-dialog-container {padding:10px;}

/* Dialogs, mini windows that ask a question */
.hippo-window-dialog{background-position: 10px 10px; background-repeat: no-repeat; padding: 5px; padding-left: 75px; padding-top: 20px; min-height: 200px;}
.hippo-window-dialog-title{font-size: 11px;}
.hippo-window-dialog-question{font-weight: bold}

/* Wicket Modal windows overwrite */
.hippo-root div.wicket-modal div.w_blue div.w_top, 
.hippo-root div.wicket-modal div.w_blue div.w_bottom,
.hippo-root div.wicket-modal div.w_blue div.w_topLeft,
.hippo-root div.wicket-modal div.w_blue div.w_topRight,
.hippo-root div.wicket-modal div.w_blue div.w_bottomRight,
.hippo-root div.wicket-modal div.w_blue div.w_bottomLeft,
.hippo-root div.wicket-modal div.w_blue a.w_close{
background-image: url(images/box-blue.png);}

.hippo-root div.wicket-modal div.w_blue div.w_left,
.hippo-root div.wicket-modal div.w_blue div.w_right {
background-image:url(images/box-blue2.png);}

/* .hippo-root div.wicket-modal div.w_caption{background: url("images/box-blue-caption.png") repeat-x; height: 20px; padding: 6px;} */
.hippo-root div.wicket-modal div.w_caption{height: 24px; background: #999999; text-align: center; color: #f2f2f2}
.hippo-root div.wicket-modal div.w_caption span{color: white; font-size: 11px; font-weight: bold; margin: 0px; padding: 0px; position: relative;}
.hippo-root div.w_blue a.w_close{width: 44px; height: 18px; background-position: -154px -48px;}
.hippo-root div.w_blue a.w_close:hover{background-position: -154px -66px; width: 44px; height: 18px;}
.hippo-root div.wicket-modal div.w_content {background: white url("images/box-blue-back.png") repeat-x bottom left} 
.hippo-root div.wicket-modal div.w_content_3{border: none}
.hippo-root div.wicket-modal div.w_content_2 {padding-top: 0px}
.hippo-root div.wicket-modal div.w_content_1{margin-right: 7px;}
.hippo-root div.wicket-modal div.w_right_1 {margin-left:7px;}

/* Overlay on full application on popup styling */
.hippo-root div.wicket-mask-dark{opacity: 0.5; background-image:url("images/transparent-back.png"); filter:alpha(opacity=0.5)}

/* Picker General Styling */
.hippo-picker{background: url("images/picker-back.png") repeat-y; height: 331px; border-bottom: 1px solid #afafaf}
.hippo-picker-tree{width: 193px; float: left;} 
.hippo-picker-tree .hippo-tree{height: 255px; width: 193px}
.hippo-picker-list-details{height: 306px; margin-left: 194px; background: #ffffff url('images/silverBack3.png') repeat-x; width: auto; position: relative; overflow: auto}
.hippo-picker-properties{clear:both; height: 35px; padding: 10px;}
/* ... */

